portfolio cards transition done

--- a/portfolio.html
+++ b/portfolio.html
@@ -72,11 +72,13 @@
         <ul class="portfolio-projects-list list">
           <li class="portfolio-projects-list-item">
             <a class="portfolio-project-card-link link" href="">
-              <img class="portfolio-project-photo" src="./img/img_porfolio/img01.jpg" alt="вебсайт Технокряк"
-                width="370">
-              <div class="overlay">
-                <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
-                  используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              <div class="portfolio-thumb">
+                <img class="portfolio-project-photo" src="./img/img_porfolio/img01.jpg" alt="вебсайт Технокряк"
+                  width="370">
+                <div class="overlay">
+                  <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
               </div>
               <div class="portfolio-project-card-text">
                 <h2 class="project-title">Технокряк</h2>
@@ -86,11 +88,13 @@
           </li>
           <li class="portfolio-projects-list-item">
             <a class="portfolio-project-card-link link" href="">
-              <img class="portfolio-project-photo" src="./img/img_porfolio/img02.jpg" alt="дизайн постера New Orlean"
-                width="370">
-              <div class="overlay">
-                <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
-                  используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              <div class="portfolio-thumb">
+                <img class="portfolio-project-photo" src="./img/img_porfolio/img02.jpg" alt="дизайн постера New Orlean"
+                  width="370">
+                <div class="overlay">
+                  <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
               </div>
               <div class="portfolio-project-card-text">
                 <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
@@ -100,11 +104,13 @@
           </li>
           <li class="portfolio-projects-list-item">
             <a class="portfolio-project-card-link link" href="">
-              <img class="portfolio-project-photo" src="./img/img_porfolio/img03.jpg" alt="приложение ресторана Seafood"
-                width="370">
-              <div class="overlay">
-                <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
-                  используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              <div class="portfolio-thumb">
+                <img class="portfolio-project-photo" src="./img/img_porfolio/img03.jpg"
+                  alt="приложение ресторана Seafood" width="370">
+                <div class="overlay">
+                  <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
               </div>
               <div class="portfolio-project-card-text">
                 <h2 class="project-title">Ресторан Seafood</h2>
@@ -114,11 +120,13 @@
           </li>
           <li class="portfolio-projects-list-item">
             <a class="portfolio-project-card-link link" href="">
-              <img class="portfolio-project-photo" src="./img/img_porfolio/img04.jpg" alt="маркетинг проекта Prime"
-                width="370">
-              <div class="overlay">
-                <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
-                  используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              <div class="portfolio-thumb">
+                <img class="portfolio-project-photo" src="./img/img_porfolio/img04.jpg" alt="маркетинг проекта Prime"
+                  width="370">
+                <div class="overlay">
+                  <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
               </div>
               <div class="portfolio-project-card-text">
                 <h2 class="project-title">Проект Prime</h2>
@@ -128,25 +136,29 @@
           </li>
           <li class="portfolio-projects-list-item">
             <a class="portfolio-project-card-link link" href="">
-              <img class="portfolio-project-photo" src="./img/img_porfolio/img05.jpg" alt="приложение Boxes"
-                width="370">
-              <div class="overlay">
-                <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
-                  используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
-              </div>
-              <div class="portfolio-project-card-text">
-                <h2 class="project-title">Проект Boxes</h2>
-                <p class="project-description">Приложение</p>
+              <div class="portfolio-thumb">
+                <img class="portfolio-project-photo" src="./img/img_porfolio/img05.jpg" alt="приложение Boxes"
+                  width="370">
+                <div class="overlay">
+                  <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
+                <div class="portfolio-project-card-text">
+                  <h2 class="project-title">Проект Boxes</h2>
+                  <p class="project-description">Приложение</p>
+                </div>
               </div>
             </a>
           </li>
           <li class="portfolio-projects-list-item">
             <a class="portfolio-project-card-link link" href="">
-              <img class="portfolio-project-photo" src="./img/img_porfolio/img06.jpg" alt="вебсайт Inspiration"
-                width="370">
-              <div class="overlay">
-                <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
-                  используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              <div class="portfolio-thumb">
+                <img class="portfolio-project-photo" src="./img/img_porfolio/img06.jpg" alt="вебсайт Inspiration"
+                  width="370">
+                <div class="overlay">
+                  <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
               </div>
               <div class="portfolio-project-card-text">
                 <h2 class="project-title">Inspiration has no Borders</h2>
@@ -156,11 +168,13 @@
           </li>
           <li class="portfolio-projects-list-item">
             <a class="portfolio-project-card-link link" href="">
-              <img class="portfolio-project-photo" src="./img/img_porfolio/img07.jpg"
-                alt="дизайн издания Limited Edition" width="370">
-              <div class="overlay">
-                <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
-                  используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              <div class="portfolio-thumb">
+                <img class="portfolio-project-photo" src="./img/img_porfolio/img07.jpg"
+                  alt="дизайн издания Limited Edition" width="370">
+                <div class="overlay">
+                  <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
               </div>
               <div class="portfolio-project-card-text">
                 <h2 class="project-title">Издание Limited Edition</h2>
@@ -170,11 +184,13 @@
           </li>
           <li class="portfolio-projects-list-item">
             <a class="portfolio-project-card-link link" href="">
-              <img class="portfolio-project-photo" src="./img/img_porfolio/img08.jpg" alt="маркетинг проекта LAB"
-                width="370">
-              <div class="overlay">
-                <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
-                  используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              <div class="portfolio-thumb">
+                <img class="portfolio-project-photo" src="./img/img_porfolio/img08.jpg" alt="маркетинг проекта LAB"
+                  width="370">
+                <div class="overlay">
+                  <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
               </div>
               <div class="portfolio-project-card-text">
                 <h2 class="project-title">Проект LAB</h2>
@@ -184,11 +200,13 @@
           </li>
           <li class="portfolio-projects-list-item">
             <a class="portfolio-project-card-link link" href="">
-              <img class="portfolio-project-photo" src="./img/img_porfolio/img09.jpg" alt="приложение Growing Business"
-                width="370">
-              <div class="overlay">
-                <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
-                  используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              <div class="portfolio-thumb">
+                <img class="portfolio-project-photo" src="./img/img_porfolio/img09.jpg"
+                  alt="приложение Growing Business" width="370">
+                <div class="overlay">
+                  <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
               </div>
               <div class="portfolio-project-card-text">
                 <h2 class="project-title">Growing Business</h2>
